# orchestrate

./: .env.example  README.md  demo.py  pyproject.toml  story_generator.yaml  streamlit_demo.py
docs/: agent_composer_guide.md  demo.md  idea.md  instructions.md  pitch_deck.md  plan.md  project_status.md  running_notes.md  update_1.md  visualizer.md
examples/: compile_example.py  compose_example.py  debate.result.json  debate.yaml  dnd_adventure.yaml  marketing.yaml  marketing_with_io.yaml  riddles.yaml  sdk_example.py  user_input_example.yaml  visualize_results.py
examples/output/: debate_context_manager.yaml
src/orchestrate/: README_SDK.md  __init__.py  app.py  cli.py  cli_compile.py  cli_compose.py  cli_visualize.py  compiler.py  composer.py  engine.py  llm.py  mock_llm.py  models.py  parser.py  sdk.py  visualizer.py
tests/: test_client_structured_outputs.py  test_engine.py  test_mock_workflow.py  test_openai.py  test_structured_outputs.py  test_workflow_structured_outputs.py
